--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,6 @@ dependencies {
 
 license {
     ext {
-        url = 'https://github.com/FeatureIDE/FeatJAR-bin-cadical'
+        licence_url = 'https://github.com/FeatureIDE/FeatJAR-bin-cadical'
     }
 }
